<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.1.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.optum</groupId>
	<artifactId>spring-cloud-parent-pom</artifactId>
	<version>0.0.1</version>
	<name>spring-cloud-parent-pom</name>
	<description>Spring Boot - Parent Pom</description>
	<packaging>pom</packaging>

	<properties>
		<java.version>11</java.version>
		<spring-cloud.version>Hoxton.RC2</spring-cloud.version>
		<downloadSources>true</downloadSources>
        <downloadJavadocs>true</downloadJavadocs>
	</properties>
	
	<scm>
		<connection>scm:git:https://github.optum.com/kvinod6/spring-cloud-poc</connection>
		<developerConnection>scm:git:https://github.optum.com/kvinod6/spring-cloud-poc</developerConnection>
		<url>scm:git:https://github.optum.com/kvinod6/spring-cloud-poc</url>
	</scm>
	
	<developers>
		<developer>
			<name>Vinod Kakujmani</name>
			<email>vinod.kakumani@optum.com</email>
			<organization>Optum HIE</organization>
			<organizationUrl>http://www.optum.com/</organizationUrl>
		</developer>
	</developers>
	
	<modules>
		<!-- Order of the modules list is important. Make sure to put the modules 
			as per the relative dependency order. -->
		<module>spring-cloud-config-app</module>
		<module>spring-cloud-eureka-server-app</module>
		<module>spring-cloud-client-app2</module>
		<module>spring-cloud-client-app1</module>
		<module>spring-cloud-customer-app</module>
		<module>spring-cloud-zuul-app</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<!-- Excluding to use log4j2 -->
			<exclusions>
		      <exclusion>
		         <groupId>org.springframework.boot</groupId>
		         <artifactId>spring-boot-starter-logging</artifactId>
		      </exclusion>
		   </exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<!-- Excluding to use log4j2 -->
			<exclusions>
		      <exclusion>
		         <groupId>org.springframework.boot</groupId>
		         <artifactId>spring-boot-starter-logging</artifactId>
		      </exclusion>
		   </exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		
		<!-- Log4j2 -->
		<dependency>
		   <groupId>org.springframework.boot</groupId>
		   <artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		
		<dependency>
		   <groupId>com.fasterxml.jackson.dataformat</groupId>
		   <artifactId>jackson-dataformat-yaml</artifactId>
		</dependency>
		
		<dependency>
		   <groupId>com.fasterxml.jackson.core</groupId>
		   <artifactId>jackson-databind</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- Added for JAVA 11 Support START -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>${java.version}</release>
				</configuration>
				<dependencies>
					<dependency>
						<!-- update compiler plugin dependency on ASM for Java 11 compatibility -->
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>6.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<!-- Added for JAVA 11 Support END -->
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</repository>
	</repositories>
</project>
